--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<Center>
+<h1>Best Website Ever!!</h1>
+<p>Also Shaun is gay.</p>
+</Center>
 </body>
 </html>
