--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
-                    <h1 class="mbr-section-title display-1">Hello i'm Kirran Lewis</h1>
+                    <h1 class="mbr-section-title display-1">Placeholder Website</h1>
                     
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-info" href="https://Twitter.com/KirranLewis">Twitter</a> <a class="btn btn-lg btn-danger" href="https://youtube.com/Kingkirran">YouTube</a> </div>
                 </div>
